--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -5,41 +5,55 @@
       </div>
 
       <div class="page-content">
-        <div class="md-headline">Cross Country Board &amp; Coaches</div>
-        <md-card class="coach-card" ng-repeat="coach in xcCoaches">
-          <md-card-title>
-            <md-card-title-text>
-              <span class="md-headline">{{coach.name}}</span>
-              <span class="md-subhead">{{coach.position}}</span>
-            </md-card-title-text>
-            <md-card-title-media>
-              <div class="md-media-md card-media">
-                <img src="{{coach.image}}">
-              </div>
-            </md-card-title-media>
-          </md-card-title>
-          <md-card-actions layout="row" layout-align="end center">
-            <md-button ng-click="emailCoach(coach.email)">Email</md-button>
-          </md-card-actions>
-        </md-card>
-
-        <div class="md-headline second-title">Track and Field Board &amp; Coaches</div>
-        <md-card class="coach-card" ng-repeat="coach in tfCoaches">
-          <md-card-title>
-            <md-card-title-text>
-              <span class="md-headline">{{coach.name}}</span>
-              <span class="md-subhead">{{coach.position}}</span>
-            </md-card-title-text>
-            <md-card-title-media>
-              <div class="md-media-md card-media">
-                <img src="{{coach.image}}">
-              </div>
-            </md-card-title-media>
-          </md-card-title>
-          <md-card-actions layout="row" layout-align="end center">
-            <md-button ng-click="emailCoach(coach.email)">Email</md-button>
-          </md-card-actions>
-        </md-card>
+        <div class="contact-cards">
+          <div class="md-headline title">Track and Field Board &amp; Coaches</div>
+          <md-card class="coach-card" ng-repeat="coach in tfCoaches">
+          <md-card-header class="header">
+              <md-card-header-text>
+                <span class="md-headline">{{coach.position}}</span>
+              </md-card-title-text>
+            </md-card-title>
+            <md-card-title class="title">
+              <md-card-title-text>
+                <span class="md-headline">{{coach.name}}</span>
+                <span class="md-subhead">{{coach.email}}</span>
+              </md-card-title-text>
+              <md-card-title-media>
+                <div class="md-media-md card-media">
+                  <img src="{{coach.image}}">
+                </div>
+              </md-card-title-media>
+            </md-card-title>
+            <md-card-actions layout="row" layout-align="end center">
+              <md-button class="button" ng-click="emailCoach(coach.email)">Email</md-button>
+            </md-card-actions>
+          </md-card>
+        </div>
+        <md-divider></md-divider>
+        <div class="contact-cards">
+          <div class="md-headline title">Cross Country Board &amp; Coaches</div>
+          <md-card class="coach-card" ng-repeat="coach in xcCoaches">
+          <md-card-header class="header">
+              <md-card-header-text>
+                <span class="md-headline">{{coach.position}}</span>
+              </md-card-title-text>
+            </md-card-title>
+            <md-card-title class="title">
+              <md-card-title-text>
+                <span class="md-headline">{{coach.name}}</span>
+                <span class="md-subhead">{{coach.email}}</span>
+              </md-card-title-text>
+              <md-card-title-media>
+                <div class="md-media-md card-media">
+                  <img src="{{coach.image}}">
+                </div>
+              </md-card-title-media>
+            </md-card-title>
+            <md-card-actions layout="row" layout-align="end center">
+              <md-button class="button" ng-click="emailCoach(coach.email)">Email</md-button>
+            </md-card-actions>
+          </md-card>
+        </div>
       </div>
   </div>
 </div>
