--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,17 +1,17 @@
 <div class="home-page-container">
-	<div class="image-slider-container">sliding image scroller here</div>
+	<div class="image-slider-container"><img class="image" src="images/itc_front_banner.png"></div>
 
 	<div class="social-bar-container" layout="row" layout-align="center center">
 		<a class="social-bar facebook-bar" href="https://www.facebook.com/illinoisxctrackclub/"><i class="ion-social-facebook"></i></a>
 		<a class="social-bar twitter-bar" href="https://twitter.com/IlliniTrackClub"><i class="ion-social-twitter"></i></a>
-		<a class="social-bar instagram-bar" href=""><i class="ion-social-instagram-outline"></i></a>
+		<a class="social-bar instagram-bar" href="https://www.instagram.com/illinitrackclub/"><i class="ion-social-instagram-outline"></i></a>
 		<a class="social-bar youtube-bar" href="https://www.youtube.com/channel/UCcZRTX-FYPADoTpgc1jAcow"><i class="ion-social-youtube"></i></a>
 	</div>
 
 	<div class="centered-content padded-content">
 		<div class="about-title">About Us</div>
 		<div class="about-text">The University of Illinois Cross Country and Track Clubs are competitive coeducational collegiate running teams that compete at NCAA and NIRCA (National Intercollegiate Running Club Association) competitions during both cross country (fall) and track (spring) seasons. Our members are graduate and undergraduate students at the University of Illinois and include everyone from beginning runners to All-State and All-American athletes.</div>
-		<div class="about-text">We are one of the foremost clubs in NIRCA, and travel all over the Midwest to compete at NCAA meets and NIRCA meets for both track and cross country.</div>
+		<div class="about-text">We are one of the foremost clubs in NIRCA, and travel all over the Midwest to compete at NCAA and NIRCA meets for both track and cross country.</div>
 		<div class="about-text">If you are interested or if you have any questions please do not hesitate to contact us or visit our prospective members page. Thank you and we hope to see you out competing with us soon! We generally meet daily at 4:15 at the west entrance of the Armory at 4th and Gregory during the school year.</div>
 	</div>
 </div>
