--- a/app/views/prospective_members.html
+++ b/app/views/prospective_members.html
@@ -15,12 +15,12 @@
       <div class="faq-question">The Illinois Track Club begins racing as early as December, with meets held nearly every weekend throughout the semester. Track, unlike cross country, often has limited entries at each meet, but the multitude of meets we attend means that everyone gets a chance to compete a few times over the course of the semester. Just like cross country, a Club National Championship Meet offers an opportunity to compete against clubs from all over the country.</div>
       <div class="faq-question">Aside from the competition, the club also provides a great support network and helps to forge some of the best friendships you will have in college. It is a friendly environment from day one, and we have many social and volunteering activities outside of running to build these relationships.</div>
       <div class="faq-question">Furthermore, we are a completely student run organization at University of Illinois. The leaders of our club are elected by the members of the team at the end of each season. As a member of the club, you have the opportunity to demonstrate passion and make important decisions on the club by becoming a leader as early as your sophomore year. If you are looking to foster your own leadership ability while continuing to do what you love, then ITC/IXC is perfect for you.</div>
-      <div class="md-headline faq-title"><strong><em>What are the next steps? - Join our mailing list!</em></strong></div>
+      <div class="md-headline faq-title"><strong><em>What are the next steps? - Contact us!</em></strong></div>
       <div class="faq-question">If you are planning to attend the University of Illinois at Urbana-Champaign and you are not quite ready to be finished with your running career, we invite you come and see what we&rsquo;re all about. If you would like more information about our club, please send us an email! If you would like more information about NIRCA and club running as a whole, please visit clubrunning.org</div>
       <div class="faq-question">If you are attending another university and are not joining the varsity team, we would also encourage you to check out their specific club team. There are many other great clubs out there! Your running career does not have to end with high school.</div>
-      <div class="faq-question">We hope to hear from you!</div>
+      <div class="faq-question">We hope to hear from you! Feel free to contact anyone in the Contacts page!</div>
       </div>
-      <div class="mailing-list extra-vertical-space"><md-button class="md-raised md-primary mailing-list-button" ng-click="openEmailSurvey()" analytics-on="click" analytics-event="Opened email survey">Join our Mailing List</md-button></div>
+      <!-- <div class="mailing-list extra-vertical-space"><md-button class="md-raised md-primary mailing-list-button" ng-click="openEmailSurvey()" analytics-on="click" analytics-event="Opened email survey">Join our Mailing List</md-button></div> -->
     </div>
   </div>
 </div>
