--- a/app/views/clubrelays.html
+++ b/app/views/clubrelays.html
@@ -23,12 +23,12 @@
 
       <div class="info">
         <div class="info-header">Schedule of Events</div>
-        <div>Schedule is tentative. The women’s race of each event will precede the men’s race. The meet will be run on a rolling schedule.</div>
+        <div>The women’s race of each event will precede the men’s race. The meet will be run on a rolling schedule.</div>
       </div>
       <div class="meet-schedule">
         <div class="two-column-table">
           <div class="left-column">
-            <div class="column-header">Running Events:</div>
+            <div class="column-header">10:00 AM - Running Events:</div>
             <div class="row">60m Hurdles</div>
             <div class="row">60m Dash</div>
             <div class="row">4x800m Relay</div>
@@ -39,7 +39,7 @@
             <div class="row">4x400m Relay</div>
           </div>
           <div class="right-column">
-            <div class="column-header">Field Events:</div>
+            <div class="column-header">10:00 AM - Field Events:</div>
             <div class="row">High Jump</div>
             <div class="row">Long Jump</div>
             <div class="row">Triple Jump</div>
