Fixed filter issue with .0 times

--- a/app/views/news.html
+++ b/app/views/news.html
@@ -11,7 +11,7 @@
     </div>
     <div class="post-container">
         <div layout="row" layout-sm="column" layout-align="space-around">
-                <md-progress-circular class="loading" md-mode="indeterminate" md-diameter="100px" ng-show="isLoadingTP"></md-progress-circular>
+            <md-progress-circular class="loading" md-mode="indeterminate" md-diameter="100px" ng-show="isLoadingNews"></md-progress-circular>
         </div>
     	<div class="post" ng-repeat="news in news[selectedYear] | orderObjectBy:'post_datetime':true">
     		<div class="post-title"><em>{{ ::news.post_subject }}</em></div>
