--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -365,7 +365,7 @@ md-menu-content {
 			box-shadow: inset 0 0 5px $black;
 
 			.post-title {
-				color: $orange;
+				color: $black;
 				font-size: 24px;
 			}
 
